5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1756_1576.log
== TEST (2019-05-27 13:45:38) 
-- CODE:
from numpy import *
e = array(evel(int("num:")))
b = array(evel(int("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(c<size(e))
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
File "XXXX", line 10
    while(c<size(e))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:46:12) 
-- CODE:
from numpy import *
e = array(evel(int("num:")))
b = array(evel(int("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e))
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
File "XXXX", line 10
    while(ve < size(e))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:46:21) 
-- CODE:
from numpy import *
e = array(evel(int("num:")))
b = array(evel(int("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:46:53) 
-- CODE:
from numpy import *
e = array(eval(int("num:")))
b = array(eval(int("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:47:12) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:48:23) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
	ve = ve + 1 
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATES")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:50:01) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
	ve = ve + 1 
print(size(ve))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:51:23) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
	ve = ve + 1 
print(size(ve))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- EXECUTION TIME:
0.497148
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
1
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
1
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
1
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:51:26) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1
	ve = ve + 1 
print(size(ve))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:54:04) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1	
	ve = ve + 1 
print(size(ve))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- EXECUTION TIME:
0.35806
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
1
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
1
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
1
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:54:06) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1	
	ve = ve + 1 
print(size(ve))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:56:39) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1	
	ve = ve + 1 
print(size(e))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:56:51) 
-- CODE:
from numpy import *
e = array(eval(input("num:")))
b = array(eval(input("num:")))
pedra = 11
papel = 22
tesoura = 33
ve = 0
bar = 0
eu = 0
while(ve < size(e)):
	if(e[ve] == tesoura and b[ve] == pedra):
		bar = bar + 1
	elif((e[ve] == tesoura and b[ve] == papel)):
		eu = eu + 1
	elif(e[ve] == papel and b[ve] == tesoura):
		bar = bar + 1
	elif(e[ve] == papel and b[ve] == pedra):
		eu = eu + 1 
	elif(e[ve] == pedra and b[ve] == tesoura):
		eu = eu + 1
	elif(e[ve] == pedra and b[ve] == papel):
		bar = bar + 1	
	ve = ve + 1 
print(size(e))
if(eu > bar):
	print("EUSAPIA")
elif(eu<bar):
	print("BARSANULFO")
else:
	print ("EMPATE")
-- EXECUTION TIME:
0.45671
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
